# borjomi

./: .gitignore  README.md
borjomi/: CMakeLists.txt
borjomi/borjomi/: borjomi.h
borjomi/borjomi/engine/: engine.h
borjomi/borjomi/engine/avx/kernels/: fill.h  kernels.h  multiply.h
borjomi/borjomi/engine/avx/utils/: utils.h
borjomi/borjomi/engine/avx2/kernels/: fill.h  kernels.h  multiply.h
borjomi/borjomi/engine/avx2/utils/: utils.h  utils2.h
borjomi/borjomi/engine/cuda/: helper_cuda.h
borjomi/borjomi/engine/cuda/kernels/: kernels.h  multiply.h
borjomi/borjomi/engine/internal/kernels/: copy.h  fill.h  kernels.h  multiply.h
borjomi/borjomi/engine/mkl/kernels/: kernels.h  multiply.h
borjomi/borjomi/engine/threads/kernels/: copy.h  fill.h  kernels.h  multiply.h
borjomi/borjomi/engine/threads/utils/: parallel_loop.h
borjomi/borjomi/kernels/: kernels.h
borjomi/borjomi/kernels/avepool_op/: avepool_op.h  avepool_op_backward_internal.h  avepool_op_forward_internal.h
borjomi/borjomi/kernels/convolutional_op/: conv_op.h  conv_op_backward_avx.h  conv_op_backward_internal.h  conv_op_backward_threads.h  conv_op_forward_avx.h  conv_op_forward_internal.h  conv_op_forward_threads.h
borjomi/borjomi/kernels/convolutionalv2_op/: convv2_op.h  convv2_op_backward_internal.h  convv2_op_forward_internal.h
borjomi/borjomi/kernels/convolutionalx_op/: convx_op.h  convx_op_backward_internal.h  convx_op_forward_avx.h  convx_op_forward_internal.h
borjomi/borjomi/kernels/fully_connected_op/: fully_connected_op.h  fully_connected_op_backward_avx.h  fully_connected_op_backward_cuda.h  fully_connected_op_backward_internal.h  fully_connected_op_backward_threads.h  fully_connected_op_forward_avx.h  fully_connected_op_forward_cuda.h  fully_connected_op_forward_internal.h  fully_connected_op_forward_threads.h
borjomi/borjomi/kernels/maxpool_op/: maxpool_op.h  maxpool_op_backward_internal.h  maxpool_op_backward_threads.h  maxpool_op_forward_internal.h  maxpool_op_forward_threads.h
borjomi/borjomi/kernels/minpool_op/: minpool_op.h  minpool_op_backward_internal.h  minpool_op_forward_internal.h
borjomi/borjomi/kernels/params/: conv_params.h  params.h
borjomi/borjomi/network/: edge.h  layer_sequence.h  network.h  result.h
borjomi/borjomi/network/activations/: activation_layer.h  activations.h  asinh_layer.h  elu_layer.h  leaky_relu_layer.h  relu_layer.h  selu_layer.h  sigmoid_layer.h  softmax_layer.h  softplus_layer.h  softsign_layer.h  tanh_layer.h  tanh_p1m2_layer.h
borjomi/borjomi/network/layers/: average_pooling_layer.h  convolutional_layer.h  convolutional_layer_v2.h  convolutionalx_layer.h  fully_connected_layer.h  layer.h  layers.h  max_pooling_layer.h  min_pooling_layer.h  pooling_layer.h  trainable_layer.h
borjomi/borjomi/types/: allocator_t.h  content_t.h  engine_t.h  error_t.h  label_t.h  matrix_t.h  padding_t.h  shape2d_t.h  shape3d_t.h  types.h
borjomi/borjomi/util/: util.h
borjomi/borjomi/util/algorithm/: algorithm.h
borjomi/borjomi/util/log/: log.h
borjomi/borjomi/util/math/: loss_function.h  math.h  optimizer.h  random.h  weight_init.h
borjomi/borjomi/util/timer/: timer.h
borjomi/cmake/: summary.cmake
borjomi/cmake/Templates/: borjomi-config-version.cmake.in
borjomi/examples/: CMakeLists.txt
borjomi/examples/cifar10/: cifar_io.h  display.h  train.cpp
borjomi/examples/engine_test/: testMultiplication.cpp
borjomi/examples/mnist/: display.h  mnist_parser.h  train.cpp
borjomi/examples/sinus_fit/: sinus_fit.cpp  sinus_fit_avx.cpp  sinus_fit_cuda.cpp  sinus_fit_internal.cpp  sinus_fit_threads.cpp
borjomi/examples/tests/: conv_test.cpp
borjomi/tests/: CMakeLists.txt
borjomi/tests/convolutional_and_convolutionalx_similarity_tests/: convolutional_and_convolutionalx_similarity_test.cpp
borjomi/tests/convolutionalx_layer_tests/: convolutionalx_layer_test.cpp
